<resources>
    <string name="app_name">ExerWise</string>

    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="please_sign_in">Please sign in to your account.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_in_with_apple">Sign In with Apple</string>
    <string name="dont_have_an_account">"Don't have an account? "</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an account</string>
    <string name="please_sign_up">Please sign up and create a new account.</string>
    <string name="name">Name</string>
    <string name="agree_to_terms">Agree to terms and conditions</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="sign_up_with_apple">Sign Up with Apple</string>
    <string name="have_an_account">"Have an account? "</string>

    <string name="home">Home</string>
    <string name="notification">Notification</string>

    <string name="workout">Workout</string>
    <string name="create_a_workout_from_scratch">Create a workout from scratch</string>
    <string name="create">Create</string>
    <string name="start">Start</string>
    <string name="create_workout">Create Workout</string>
    <string name="workout_title">Workout title</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="search_exercise">Search exercise</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="new_workout">New Workout</string>
    <string name="your_workouts">Your Workouts</string>
    <string name="duration">Duration</string>
    <string name="volume">Volume</string>
    <string name="sets">Sets</string>
    <string name="time">Time</string>
    <string name="workouts">Workouts</string>
    <string name="sign_in_as_a_guest">Sign In as a Guest</string>

    <array name="body_part_array">
        <item>All</item>
        <item>Back</item>
        <item>Cardio</item>
        <item>Chest</item>
        <item>Lower Arms</item>
        <item>Lower Legs</item>
        <item>Neck</item>
        <item>Shoulders</item>
        <item>Upper Arms</item>
        <item>Upper Legs</item>
        <item>Waist</item>
    </array>

    <array name="equipment_array">
        <item>All</item>
        <item>Assisted</item>
        <item>Band</item>
        <item>Barbell</item>
        <item>Body Weight</item>
        <item>Bosu Ball</item>
        <item>Cable</item>
        <item>Dumbbell</item>
        <item>Elliptical Machine</item>
        <item>EZ Barbell</item>
        <item>Hammer</item>
        <item>Kettlebell</item>
        <item>Leverage Machine</item>
        <item>Medicine Ball</item>
        <item>Resistance Band</item>
        <item>Roller</item>
        <item>Rope</item>
        <item>Skierg Machine</item>
        <item>Sled Machine</item>
        <item>Smith Machine</item>
        <item>Stability Ball</item>
        <item>Stationary Bike</item>
        <item>Stepmill Machine</item>
        <item>Tire</item>
        <item>Trap Bar</item>
        <item>Upper Body Ergometer</item>
        <item>Weighted</item>
        <item>Wheel Roller</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>