<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/BigText"
                android:text="@string/sign_in" />
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/dimen_16"
        android:paddingEnd="@dimen/dimen_16"
        android:paddingBottom="@dimen/dimen_16">

        <TextView
            style="@style/MediumText"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_32"
            android:text="@string/welcome_back" />

        <TextView
            style="@style/SmallText"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dimen_32"
            android:text="@string/please_sign_in" />

        <include
            android:id="@+id/emailInputLayout"
            layout="@layout/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16" />

        <include
            android:id="@+id/passwordInputLayout"
            layout="@layout/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16" />

        <TextView
            style="@style/SmallText"
            android:layout_gravity="end"
            android:text="@string/forgot_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/signIn"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_32"
                android:text="@string/sign_in" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_32"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dimen_48"
                android:paddingEnd="@dimen/dimen_48">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?attr/colorOnSurfaceVariant" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_8"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text="@string/or" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?attr/colorOnSurfaceVariant" />

            </LinearLayout>

            <Button
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16"
                android:backgroundTint="@color/white"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/black"
                app:icon="@drawable/ic_google"
                app:iconGravity="textStart"
                app:iconTintMode="multiply" />

            <Button
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/sign_in_with_apple"
                android:textColor="@color/black"
                app:icon="@drawable/ic_apple"
                app:iconGravity="textStart"
                app:iconTintMode="multiply" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <TextView
                style="@style/SmallText"
                android:text="@string/dont_have_an_account" />

            <TextView
                android:id="@+id/signUp"
                style="@style/SmallText"
                android:text="@string/sign_up"
                android:textColor="@color/primary" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>