<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragment.SignInFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/sign_up"
        app:titleTextAppearance="@style/LargeTextViewStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/dimen_16">

        <TextView
            style="@style/MediumTextViewStyle"
            android:layout_gravity="center"
            android:text="@string/create_an_account" />

        <TextView
            style="@style/SmallTextViewStyle"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dimen_32"
            android:text="@string/please_sign_up" />

        <include
            android:id="@+id/nameInputLayout"
            layout="@layout/name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16" />

        <include
            android:id="@+id/emailInputLayout"
            layout="@layout/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16" />

        <include
            android:id="@+id/passwordInputLayout"
            layout="@layout/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_8" />

        <Button
            android:id="@+id/signUp"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <LinearLayout
            android:id="@+id/signInTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <TextView
                style="@style/SmallTextViewStyle"
                android:text="@string/have_an_account" />

            <TextView
                style="@style/SmallTextViewStyle"
                android:text="@string/sign_in"
                android:textColor="?attr/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>