<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragment.NewWorkoutFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        app:title="@string/workout"
        app:titleTextAppearance="@style/LargeTextView">

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16">

            <TextView
                style="@style/MediumTextView"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="New Workout" />

            <TextView
                style="@style/SmallTextView"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dimen_16"
                android:text="@string/create_a_workout_from_scratch" />

            <Button
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create" />

            <TextView
                style="@style/MediumTextView"
                android:layout_marginBottom="@dimen/dimen_16"
                android:text="Your Workouts" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>