<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragment.CreateWorkoutFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface">

        <ImageButton
            android:layout_width="@dimen/dimen_32"
            android:layout_height="@dimen/dimen_32"
            android:layout_gravity="start"
            android:background="#00FFFFFF"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_close"
            app:tint="?attr/colorPrimary" />

        <TextView
            style="@style/LargeTextView"
            android:layout_gravity="center"
            android:text="@string/create_workout" />

        <ImageButton
            android:layout_width="@dimen/dimen_32"
            android:layout_height="@dimen/dimen_32"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="#00FFFFFF"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_check"
            app:tint="?attr/colorPrimary" />

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/dimen_16"
        android:paddingEnd="@dimen/dimen_16"
        android:paddingBottom="@dimen/dimen_16">

        <EditText
            style="@style/MediumTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/workout_title"
            android:textColorHint="?attr/colorOnSurfaceVariant" />

        <Button
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_exercise"
            app:icon="@drawable/ic_baseline_add"
            app:iconGravity="textStart"
            app:iconTintMode="multiply" />

    </LinearLayout>

</LinearLayout>